fix: align checkout amount with total_amount schema

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <meta property="og:title" content="SRISHA" />
     <meta property="og:type" content="website" />
+
+    <!-- Razorpay Checkout Script -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
 
   <body>
